--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -12,6 +12,7 @@
   <tbody>
     <% @todo_lists.each do |todo_list| %>
       <tr id="<%= dom_id(todo_list) %>">
+        <td><%= link_to 'List Items', todo_list_todo_items_path(todo_list) %></td>
         <td><%= todo_list.title %></td>
         <td><%= todo_list.description %></td>
         <td><%= link_to 'Show', todo_list %></td>
