--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -6,8 +6,10 @@
 
 		<tr id="<%= dom_id(todo_item) %>">
 			<td><%= todo_item.content %></td>
+			<td><%= link_to 'Mark Complete', todo_list_todo_item_path( todo_item), method: :patch %> </td>
 			<td><%= link_to 'Edit', edit_todo_list_todo_item_path(@todo_list, todo_item) %> </td>
 		<td><%= link_to 'Delete', todo_list_todo_item_path( todo_item), method: :delete, data: {confirm: "Are you sure?"} %> </td>
+
 		</tr>
 
 	<% end %>
